# smart-logistics-supply-chain-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml
.dvc/: config
.github/workflows/: cd.yml  ci.yml  lint.yaml
codeagent-prompts/: Airflow.md  MLOps_scaffold_prompt.md  Makefilerefactor.md  MonitoringPhase1.md  MonitoringPhase2.md  PHASE2.md  PHASE_1.md  baremetaldev.md  k8s.md  makefilefactor2.md  modelservingphase1.md  refactorci.md  servingtest.md
configs/: config.yaml
dags/: supply_chain_dag.py
data/processed/: test.parquet.dvc  train.parquet.dvc  val.parquet.dvc
data/raw/: logistics.csv.dvc
deployment/docker/: Dockerfile  docker-compose.airflow.yaml  docker-compose.dev.yaml  docker-compose.yaml  requirements-airflow.txt
deployment/k8s/: deployment.yaml
docs/: CICD_KUBERNETES_ARGOCD_OVERVIEW.md
infra_aws/docker/: docker-compose.yaml
infra_aws/scripts/: s3_sync.py
infra_aws/terraform/: main.tf
infrastructure/terraform/: main.tf  provider.tf
k8s/: kind-cluster.yaml  setup_k8s.sh  setup_k8s_mac.sh
k8s/apps/: api-deployment.yaml  model-config.yaml  namespace.yaml  ui-deployment.yaml
k8s/argocd/: app.yaml
mlops_services/docker/: docker-compose.airflow.yaml  docker-compose.yaml  init-databases.sql
monitoring/docker/: docker-compose.monitoring.yaml
monitoring/grafana/provisioning/datasources/: README.md  datasource.yml.template  datasources.yml
monitoring/queries/: README.md  column_drift_over_time.sql
monitoring/scripts/: generate_datasource_config.sh  init_monitoring_db.sh
scripts/: s3_sync.py
serving/docker/: Dockerfile.serving  Dockerfile.ui  docker-compose.serving.yaml
src/: monitoring.py
src/dags/: supply_chain_dag.py
src/ml_pipeline/: __init__.py  common.py  ingest.py  preprocess.py  train.py
src/serving/: __init__.py  api.py  ui.py
src/utils/: common.py
tests/: test_api.py  test_common.py  test_pipeline.py  test_ui.py
